@@ -66,6 +66,10 @@ class PublicControllerTest < ActionController::IntegrationTest
     # new method (OBS 2.3)
     post "/public/lastevents", nil
     assert_response :success
+    # new method (OBS 2.3) using credentials
+    prepare_request_with_user "tom", "thunder"
+    post "/lastevents", nil
+    assert_response :success
   end
 
   def test_distributions
