@@ -18,6 +18,8 @@ Changes:
 
 * build: vminit can now be installed for multiple architectures in parallel on
          OBS server.
+* api: Interconnect supports to use credentials as part of the remoteurl.
+       Note: the url must not use /public suffix in that case
 
 Bugfixes:
 =========
